# tempmail2api

./: .dockerignore  .gitignore  API NOTES.md  API_NOTES_BOOMLIFY.md  API_NOTES_TEMPMAIL_ING.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAIL_API_NOTES.md  Makefile  PROGRESS.md  README.md  cli.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  test_real_providers.py
.github/workflows/: test.yml
examples/: demo_all.py
providers/: __init__.py  __main__.py  adguard.py  anonymmail.py  base.py  boomlify.py  byom.py  chatgptmail.py  crazymailing.py  disposablemail.py  disposablemail_com.py  emaildashfake.py  emailfake.py  emailnator.py  emailondeck.py  emailtick.py  etempmail.py  expressinboxhub.py  eyepaste.py  eztempmail.py  fakemail_net.py  fakemailgenerator.py  fakermail.py  generator_email.py  guerrillamail.py  guerrillamail_aliases.py  harakirimail.py  haribu.py  inboxes.py  inboxkitten.py  incognitomail.py  internxt.py  lroid.py  mail4qa.py  mail_gw.py  mail_temp.py  mail_tm.py  mailcatch.py  maildax.py  maildrop.py  (+36 more)
tests/: conftest.py  test_providers.py  test_providers_mock.py  test_server.py
