[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgptmail-2api"
version = "3.6.0"
description = "逆向解析多个临时邮箱平台的 Web API 协议，提供统一 Python 客户端 + HTTP API 服务"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "keggin-CHN", email = "239289001@qq.com"},
]
keywords = ["tempmail", "disposable-email", "api", "chatgptmail", "boomlify"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "curl_cffi>=0.7.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.2.0",
]

[project.scripts]
chatgptmail-2api = "server:main"

[project.urls]
Homepage = "https://github.com/keggin-CHN/chatgptmail-2api"
Repository = "https://github.com/keggin-CHN/chatgptmail-2api"
Issues = "https://github.com/keggin-CHN/chatgptmail-2api/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
